<resources>
    <string name="app_name">LeaderBoad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaderboad">leaderboad</string>
    <string name="submit">Submit</string>
    <string name="leader_name">Leader Name</string>
    <string name="leader_hours">Leader Hours</string>
    <string name="skill_name">Skill Name</string>
    <string name="skill_iq">Skill IQ</string>
    <string name="project_in_github_link">Project in GitHub (link)</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="submit_details">Submit</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="submission_not_successful">Submission not successful</string>
    <string name="submission_successful">Submission Successful</string>
</resources>