<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@android:color/black"
    tools:context=".ProjectSubmissionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/etFirstName"
            android:layout_weight="2"
            android:textSize="24sp"
            android:background="@drawable/submit_button"
            android:layout_marginRight="10dp"
            android:hint="@string/first_name"
            android:layout_marginEnd="10dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/etLastName"
            android:background="@drawable/submit_button"
            android:textSize="24sp"
            android:layout_weight="2"
            android:hint="@string/last_name"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/submit_button"
        android:hint="@string/email_address"
        android:layout_gravity="center_vertical"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etGitHubLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_gravity="center_vertical"
        android:hint="@string/project_in_github_link"
        android:background="@drawable/submit_button"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/submit_button"
        android:id="@+id/btnSubmit"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:text="@string/submit_details"
        android:layout_gravity="bottom"
        android:textAllCaps="false"
        android:layout_marginBottom="100dp"/>



</LinearLayout>